; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_utmp-wtmp.c_utmp_put_reboot.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_utmp-wtmp.c_utmp_put_reboot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utmpx = type { i32, i32 }

@BOOT_TIME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"reboot\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @utmp_put_reboot(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.utmpx, align 4
  store i32 %0, i32* %2, align 4
  %4 = bitcast %struct.utmpx* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %4, i8 0, i64 8, i1 false)
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @init_entry(%struct.utmpx* %3, i32 %5)
  %7 = load i32, i32* @BOOT_TIME, align 4
  %8 = getelementptr inbounds %struct.utmpx, %struct.utmpx* %3, i32 0, i32 1
  store i32 %7, i32* %8, align 4
  %9 = getelementptr inbounds %struct.utmpx, %struct.utmpx* %3, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @strncpy(i32 %10, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 4)
  %12 = call i32 @write_entry_both(%struct.utmpx* %3)
  ret i32 %12
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @init_entry(%struct.utmpx*, i32) #2

declare dso_local i32 @strncpy(i32, i8*, i32) #2

declare dso_local i32 @write_entry_both(%struct.utmpx*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
